public/stylesheets/style.scss
/* ... */
.covers-container {
  // display: none;
  position: fixed;
  z-index: -1;
  width: 100%;
  height: 100%;
  top: 10%; right: 0; bottom: 0; left: 0;

  .cover {
    display: none;
    max-width: 870px;

    img {
      position: absolute;
      height: auto;
      max-width: 500px;
      max-height: 500px;
    }
  }
}
#projects-sliders {
  display: none;
  z-index: 1000;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #fff;

  .close-button {
    position: absolute;
    right: 30px;
    top: 30px;
    z-index: 3000;
    cursor: pointer;

    img {
      opacity: .8;
      width: 30px; height: auto;
    }
  }

  .center-cover {
    position: absolute;
    height: 500px; width: 500px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 100;
  }
  .right-cover, .left-cover {
    z-index: 100;
    position: absolute;
    height: 100%; width: 50%;
    top: 0;
  }
  .right-cover {
    right: 0;
    cursor: url("/images/right-cursor.png"), auto;
  }
  .left-cover {
    left: 0;
    cursor: url("/images/left-cursor.png"), auto;
  }
  .slick-slide {
    height: 100vh;
  }
  .unique-slider {
    display: none;

    .slide {
      width: 100%;

      .overflower {
        overflow: hidden;
        height: 100%; width: 100%;

        &.background-image-container {
          background-position: center center;
          background-size: cover;
        }

        img, video {
          min-width: 100%;
          min-height: 100%;
          position: absolute;
          /* height: auto; */
          width: auto;
          height: 100%;
        }
      }
    }
    .presentation-slide {
      position: relative;

      .presentation-container {
        z-index: 999;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);

        .left, .right {
          vertical-align: top;
          width: 50%;
        }
        .left {
          width: 20%;
          width: 170px;
          float: left;

          .client {
            font: 13px "DIN Pro Medium";
          }
          .season {
            font: 8px "DIN Pro Medium";
          }
          .categories {
            font: 8px "DIN Pro Light";
            margin-bottom: 17px;
            color: grey;
          }
          .url-container {
            z-index: 40000;
            cursor: pointer;

            a {
              outline: none !important;
              font: 10px "DIN Pro Light";
            }
          }
        }
        .right {
          width: 270px;
          float: right;

          .title {
            font: 13px "DIN Pro Medium";
          }
          .overflower-container {
            position: absolute;

            .overflower {
              overflow: hidden;
              max-height: 120px;

              &.longer {
                overflow-y: auto !important;
                max-height: 248px !important;
                height: 100% !important;

                &::before {
                  content: '';
                  width: 100%;
                  height: 18px;
                  position: absolute;
                  right: 0;
                  background:-moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.5) 60%, rgba(255,255,255,0) 100%);
                  background:-webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,0.5) 60%, rgba(255,255,255,0) 100%);
                  background:linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,0.5) 60%, rgba(255,255,255,0) 100%);
                  filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
                }

                &::after {
                  content: '';
                  width: 100%;
                  height: 18px;
                  position: absolute;
                  bottom: 17px;
                  right: 0;
                  background:-moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 60%, rgba(255,255,255,1) 100%);
                  background:-webkit-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 60%, rgba(255,255,255,1) 100%);
                  background:linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 60%, rgba(255,255,255,1) 100%);
                  filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
                }
              }
            }
            .description, .toggle-more {
              text-align: justify;
              font: 10px "DIN Pro Light";
            }
            .toggle-more {
              cursor: pointer;
              display: none;
            }
          }
        }
      }
    }
  }
}

/* ABOUT */
#section-about {
  .container {
    text-align: left;
    margin-top: 190px !important;

    .right {
      vertical-align: top;
      display: inline-block;
      max-width: 250px;
      width: 100%;

      h3 {
        margin-top: 8px;
      }
    }
    .left {
      display: inline-block;
      max-width: 460px;

      p {
        text-align: left;
        text-align: justify;
        font: 10px "DIN Pro Light";
        line-height: 14px;
      }
    }
  }
}
/* ... */

